# bionemo-framework

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CODEOWNERS  README.md  pytest.ini
.devcontainer/: README.md  (+1 more)
interpretability/sparse_autoencoders/: .ci_build.sh  .gitignore  README.md  pyproject.toml
interpretability/sparse_autoencoders/recipes/: README.md
interpretability/sparse_autoencoders/recipes/codonfm/: .gitignore  1b.sh  1b_swissprot.sh  README.md  pyproject.toml  run.py
interpretability/sparse_autoencoders/recipes/codonfm/codon_dashboard/: README.md  package-lock.json  package.json
interpretability/sparse_autoencoders/recipes/codonfm/codon_dashboard/src/: App.jsx  EmbeddingView.jsx  FeatureCard.jsx  FeatureDetailPage.jsx  FeatureList.jsx  Histogram.jsx  InfoButton.jsx  MolstarThumbnail.jsx  ProteinDetailModal.jsx  ProteinSequence.jsx  utils.js
interpretability/sparse_autoencoders/recipes/codonfm/run_configs/: config.yaml
interpretability/sparse_autoencoders/recipes/codonfm/run_configs/model/: 1b.yaml  5b.yaml  600m.yaml  80m.yaml
interpretability/sparse_autoencoders/recipes/codonfm/scripts/: analyze.py  dashboard.py  download_codonfm_swissprot.py  eval.py  eval_gene_enrichment.py  eval_swissprot_f1.py  extract.py  launch_dashboard.py  train.py
interpretability/sparse_autoencoders/recipes/codonfm/src/codonfm_sae/: __init__.py
interpretability/sparse_autoencoders/recipes/esm2/: README.md  pyproject.toml  run.py
interpretability/sparse_autoencoders/recipes/esm2/protein_dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
interpretability/sparse_autoencoders/recipes/esm2/protein_dashboard/src/: App.jsx  EmbeddingView.jsx  FeatureCard.jsx  Histogram.jsx  MolstarThumbnail.jsx  ProteinDetailModal.jsx  ProteinSequence.jsx  utils.js
interpretability/sparse_autoencoders/recipes/esm2/run_configs/: config.yaml
interpretability/sparse_autoencoders/recipes/esm2/scripts/: 15b.sh  3b.sh  650m.sh  eval.py  extract.py  launch_dashboard.py  train.py
interpretability/sparse_autoencoders/recipes/evo2/: pyproject.toml
interpretability/sparse_autoencoders/recipes/evo2/scripts/: 7b.sh  extract.py  train.py
interpretability/sparse_autoencoders/sae/: README.md  pyproject.toml
interpretability/sparse_autoencoders/sae/src/sae/: __init__.py  activation_store.py  analysis.py  collector.py  demo.py  perf_logger.py  process_group_manager.py  streaming.py  training.py
interpretability/sparse_autoencoders/sae/tests/: _dist_utils.py  test_kernels.py  test_streaming.py  test_topk.py  test_tp_checkpoint.py  test_tp_comms.py  test_tp_global_topk.py  test_tp_init.py  test_tp_loss.py  test_tp_topk.py  test_tp_train_step.py
models/amplify/: .dockerignore  Dockerfile  LICENSE  README.md  export.py  model_readme.template  pyproject.toml
models/amplify/.devcontainer/: Dockerfile.dev  devcontainer.json
models/amplify/src/amplify/: __init__.py  amplify_hf.py  amplify_te.py  export.py  metrics.py  rmsnorm.py  rotary.py  state_dict_convert.py
models/amplify/tests/: conftest.py  test_amplify_model.py  test_encoder_block.py  test_export.py  test_rotary_embeddings.py
models/geneformer/: .ci_build.sh  Dockerfile  LICENSE  README.md  export.py  model_readme.md  pyproject.toml
models/geneformer/src/geneformer/: __init__.py  convert.py  export.py  modeling_bert_te.py
models/geneformer/tests/: conftest.py  test_checkpoints_modeling_bert.py  test_modeling_bert.py
(+761 files in other folders)
