# UV Workspace Configuration
# This is a monorepo workspace that contains multiple Python packages.
# For development: `uv sync` installs all packages
# For external users: Each package can be installed independently
# NOTE: Do NOT `pip install -e .` from this directory. Install recipe packages directly:
#   pip install -e sae/
#   pip install -e recipes/esm2/

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biosae-workspace"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "duckdb>=1.4.3",
    "hydra-core>=1.3.2",
    "huggingface-hub>=0.25,<1.0",
    "transformers>=4.44,<5.0",
    "umap-learn>=0.5.11",
    "wandb>=0.24.0",
]

# Prevent setuptools from auto-discovering sae/ and recipes/ as packages
[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.uv.workspace]
members = ["sae", "recipes/esm2"]
